Re-run notebook dan install conda packages yang dibutuhkan.

--- a/Notebook/7.ipynb
+++ b/Notebook/7.ipynb
@@ -31,7 +31,7 @@
         "  - Apakah model cukup stabil untuk digunakan sebagai referensi harga di platform?\n",
         "\n",
         "- **Metrik keberhasilan:**\n",
-        "  - MAE dan MAPE di bawah batas tertentu (contoh: MAE \u2264 10% median harga, MAPE \u2264 20%).\n",
+        "  - MAE dan MAPE di bawah batas tertentu (contoh: MAE ≤ 10% median harga, MAPE ≤ 20%).\n",
         "\n",
         "---\n",
         "### 2. Data Acquisition & Understanding\n",
@@ -89,11 +89,11 @@
         "  - XGBRegressor (XGBoost).\n",
         "\n",
         "- **Metrik evaluasi:**\n",
-        "  - MAE, MAPE, RMSE, dan R\u00b2.\n",
+        "  - MAE, MAPE, RMSE, dan R².\n",
         "\n",
         "- **Outcome:**\n",
         "  - Model tree-based (misalnya Random Forest / XGBoost) biasanya menunjukkan performa lebih baik dibanding baseline linear regression.\n",
-        "  - Model terbaik dipilih berdasarkan kombinasi MAE rendah, MAPE rendah, dan R\u00b2 yang memadai.\n",
+        "  - Model terbaik dipilih berdasarkan kombinasi MAE rendah, MAPE rendah, dan R² yang memadai.\n",
         "\n",
         "---\n",
         "### 5. Deployment\n",
@@ -115,7 +115,7 @@
         "### 6. Customer / Stakeholder Acceptance\n",
         "\n",
         "- **Validasi metrik:**\n",
-        "  - Menghitung kembali MAE, MAPE, RMSE, dan R\u00b2 pada data uji untuk bahan diskusi.\n",
+        "  - Menghitung kembali MAE, MAPE, RMSE, dan R² pada data uji untuk bahan diskusi.\n",
         "\n",
         "- **Analisis error:**\n",
         "  - Membuat `error_df` berisi harga aktual, prediksi, Absolute Error, dan APE.\n",
@@ -200,7 +200,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Section 7 — Ringkasan TDSP untuk proyek ini.\n"
+          ]
+        }
+      ],
       "source": [
         "# Placeholder: di sini kamu bisa menambahkan kode apa pun untuk ringkasan otomatis,\n",
         "# misalnya menampilkan struktur akhir df_clean jika diperlukan.\n",
@@ -216,8 +226,16 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "pygments_lexer": "ipython3"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.9"
     }
   },
   "nbformat": 4,
