Ganti wording data accq and understanding.

--- a/Notebook/01_Business Understanding.ipynb
+++ b/Notebook/01_Business Understanding.ipynb
@@ -5,7 +5,7 @@
       "id": "e3159e8b",
       "metadata": {},
       "source": [
-        "# 1. Business Understanding (TDSP Step 1)\n",
+        "# 1. Business Understanding\n",
         "\n",
         "## 1.1 Latar Belakang\n",
         "\n",
@@ -56,20 +56,6 @@
         "- **MAPE** mengukur persentase kesalahan relatif terhadap harga aktual, yang menunjukkan seberapa besar error model dalam konteks proporsional.\n",
         "\n",
         "Sebagai target awal, model dianggap berhasil apabila mencapai **MAE ≤ 10% dari median harga** dan **MAPE ≤ 20%**, dengan ambang batas ini dapat disesuaikan sesuai kebutuhan bisnis dan karakteristik data."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "a7f2ebad",
-      "metadata": {},
-      "source": [
-        "## 1.5 Hubungan dengan TDSP\n",
-        "\n",
-        "Langkah *Business Understanding* merupakan fondasi TDSP:\n",
-        "\n",
-        "- Menentukan **apa** yang ingin dicapai (tujuan bisnis & metrik keberhasilan).\n",
-        "- Mengidentifikasi **data** yang diperlukan.\n",
-        "- Menetapkan ruang lingkup serta asumsi awal."
       ]
     }
   ],
