--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 2. Data Acquisition & Understanding (TDSP Step 2)\n",
+        "# 2. Data Acquisition And Understanding\n",
         "\n",
         "Tahap ini bertujuan untuk memahami struktur dan kualitas data yang digunakan sebelum melangkah ke tahap pemodelan.\n",
         "\n",
@@ -12,16 +12,26 @@
         "1. Mengambil (load) data dari sumber.\n",
         "2. Memahami struktur data dan tipe datanya.\n",
         "3. Melakukan pengecekan awal (data health check).\n",
-        "4. Membuat ringkasan nilai unik per kolom.\n",
-        "\n",
-        "---\n",
+        "4. Membuat ringkasan nilai unik per kolom."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "222cc3db",
+      "metadata": {},
+      "source": [
         "## 2.1 Sumber Data\n",
         "\n",
         "Dataset berasal dari **Syarah.com**, platform jual-beli mobil bekas di Arab Saudi.\n",
         "\n",
-        "File data: `./Dataset/UsedCarsSA_Unclean_EN.csv` (atau sesuaikan dengan direktori lokalmu).\n",
-        "\n",
-        "---\n",
+        "File data: `./Dataset/UsedCarsSA_Unclean_EN.csv` (atau sesuaikan dengan direktori lokalmu)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "bcafc765",
+      "metadata": {},
+      "source": [
         "## 2.2 Import Library & Load Dataset\n",
         "\n",
         "Kita mulai dengan mengimpor library dan membaca file CSV menggunakan pandas."
@@ -928,7 +938,7 @@
       "id": "d29aba25",
       "metadata": {},
       "source": [
-        "## 3.1 Menangani Missing Values\n",
+        "## 2.6 Menangani Missing Values\n",
         "\n",
         "Langkah pertama adalah memeriksa kolom mana yang memiliki nilai kosong (*missing*)."
       ]
@@ -1050,7 +1060,7 @@
       "id": "aba54b4e",
       "metadata": {},
       "source": [
-        "## 3.2 Menghapus Kolom yang Tidak Relevan\n",
+        "## 2.7 Menghapus Kolom yang Tidak Relevan\n",
         "\n",
         "Beberapa kolom tidak memiliki informasi prediktif atau hanya bersifat administratif, sehingga bisa dihapus:\n",
         "- `Link` (URL halaman web)\n",
@@ -1086,7 +1096,7 @@
       "id": "45090957",
       "metadata": {},
       "source": [
-        "## 3.3 Menghapus Duplikat dan Menangani Outlier Harga\n",
+        "## 2.8 Menghapus Duplikat dan Menangani Outlier Harga\n",
         "\n",
         "Duplikat data akan dihapus untuk menghindari bias.\n",
         "Selain itu, harga yang terlalu ekstrem juga perlu difilter agar model tidak overfit pada outlier."
@@ -1128,7 +1138,7 @@
       "id": "d17336be",
       "metadata": {},
       "source": [
-        "## 3.4 Exploratory Data Analysis Singkat\n",
+        "## 2.9 Exploratory Data Analysis Singkat\n",
         "\n",
         "Visualisasi awal untuk memahami hubungan antar variabel numerik dan target (Price)."
       ]
@@ -1197,7 +1207,7 @@
       "id": "d4b005ac",
       "metadata": {},
       "source": [
-        "## 3.5 Menambahkan Fitur Baru (Opsional)\n",
+        "## 2.10 Menambahkan Fitur Baru (Opsional)\n",
         "\n",
         "Kita bisa menambahkan fitur turunan seperti **umur mobil** untuk memperkuat model.\n",
         "\n",
@@ -1289,7 +1299,7 @@
       "id": "0237b956",
       "metadata": {},
       "source": [
-        "## 3.6 Simpan Dataset Bersih (Opsional)\n",
+        "## 2.11 Simpan Dataset Bersih (Opsional)\n",
         "\n",
         "Langkah ini membantu agar proses modeling berikutnya bisa dimulai langsung dari dataset yang sudah bersih."
       ]
