Update numbering untuk masing2 notebook dan judulnya.

--- a/Notebook/03_Modeling.ipynb
+++ b/Notebook/03_Modeling.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 4. Modeling (TDSP Step 3)\n",
+        "# 3. Modeling\n",
         "\n",
         "Pada tahap ini kita membangun model machine learning untuk memprediksi harga mobil bekas.\n",
         "\n",
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -171,7 +171,7 @@
         }
       ],
       "source": [
-        "# 4.1 Import library dan load dataset bersih\n",
+        "# 3.1 Import library dan load dataset bersih\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
@@ -205,7 +205,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.2 Menyiapkan Fitur dan Target\n",
+        "## 3.2 Menyiapkan Fitur dan Target\n",
         "\n",
         "- Target (y): kolom `Price`.\n",
         "- Fitur (X): semua kolom selain `Price`.\n",
@@ -264,7 +264,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.3 Train–Test Split\n",
+        "## 3.3 Train–Test Split\n",
         "\n",
         "Data dibagi menjadi 80 persen data latih dan 20 persen data uji."
       ]
@@ -299,7 +299,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.4 Menentukan Kolom Numerik dan Kategorikal\n",
+        "## 3.4 Menentukan Kolom Numerik dan Kategorikal\n",
         "\n",
         "Beberapa kolom numerik utama:\n",
         "- Year\n",
@@ -349,7 +349,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.5 Pipeline Preprocessing\n",
+        "## 3.5 Pipeline Preprocessing\n",
         "\n",
         "- Fitur numerik: imputasi median lalu scaling standar.\n",
         "- Fitur kategorikal: imputasi modus lalu one-hot encoding.\n",
@@ -1302,7 +1302,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.6 Fungsi Evaluasi Model\n",
+        "## 3.6 Fungsi Evaluasi Model\n",
         "\n",
         "Kita gunakan beberapa metrik:\n",
         "- MAE (Mean Absolute Error)\n",
@@ -1355,7 +1355,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.7 Baseline Model: Linear Regression\n",
+        "## 3.7 Baseline Model: Linear Regression\n",
         "\n",
         "Sebagai baseline, kita gunakan model regresi linear sederhana yang dikombinasikan dengan pipeline preprocessing."
       ]
@@ -1408,7 +1408,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.8 Tree-based Models: Random Forest dan Gradient Boosting\n",
+        "## 3.8 Tree-based Models: Random Forest dan Gradient Boosting\n",
         "\n",
         "Model berbasis pohon keputusan sering memberikan performa yang baik untuk problem regresi tabular seperti ini.\n",
         "\n",
@@ -1517,7 +1517,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.9 Model Gradient Boosting Lanjut: XGBoost\n",
+        "## 3.9 Model Gradient Boosting Lanjut: XGBoost\n",
         "\n",
         "XGBoost seringkali memberikan performa yang sangat baik pada data tabular.\n",
         "\n",
@@ -1581,7 +1581,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4.10 Ringkasan Perbandingan Model\n",
+        "## 3.10 Ringkasan Perbandingan Model\n",
         "\n",
         "        \n",
         "Kita satukan hasil evaluasi semua model ke dalam satu DataFrame untuk memudahkan perbandingan."
