--- a/Notebook/04_Deployment.ipynb
+++ b/Notebook/04_Deployment.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 5. Deployment (TDSP Step 4)\n",
+        "# 4. Deployment\n",
         "\n",
         "Pada tahap deployment, model yang sudah dilatih diintegrasikan ke dalam alur kerja yang bisa digunakan oleh aplikasi atau pengguna bisnis.\n",
         "\n",
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -169,7 +169,7 @@
         }
       ],
       "source": [
-        "# 5.1 Import library dan load dataset bersih\n",
+        "# 4.1 Import library dan load dataset bersih\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
@@ -196,7 +196,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5.2 Menyiapkan Fitur, Target, dan Preprocessing\n",
+        "## 4.2 Menyiapkan Fitur, Target, dan Preprocessing\n",
         "\n",
         "Kita ulangi langkah penting secara ringkas agar notebook ini dapat berdiri sendiri.\n",
         "\n",
@@ -1202,7 +1202,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5.3 Melatih Model yang Akan Dideploy\n",
+        "## 4.3 Melatih Model yang Akan Dideploy\n",
         "\n",
         "Sebagai contoh, kita gunakan `RandomForestRegressor` sebagai model final yang akan disimpan dan dideploy.\n",
         "\n",
@@ -1243,7 +1243,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5.4 Menyimpan Model ke File\n",
+        "## 4.4 Menyimpan Model ke File\n",
         "\n",
         "Kita menyimpan model ke dalam file `.joblib` agar dapat digunakan kembali tanpa perlu melatih ulang setiap kali.\n"
       ]
@@ -1272,7 +1272,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5.5 Fungsi Prediksi `predict_price`\n",
+        "## 4.5 Fungsi Prediksi `predict_price`\n",
         "\n",
         "Sekarang kita definisikan fungsi pembungkus yang menerima satu record mobil dalam bentuk dictionary dan mengembalikan hasil prediksi harga.\n",
         "\n",
@@ -1353,7 +1353,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5.6 Contoh Penggunaan Fungsi Prediksi\n",
+        "## 4.6 Contoh Penggunaan Fungsi Prediksi\n",
         "\n",
         "Kita uji fungsi `predict_price` dengan sebuah contoh mobil yang disimulasikan.\n"
       ]
@@ -1393,7 +1393,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5.7 Gambaran Integrasi ke Aplikasi atau API\n",
+        "## 4.7 Gambaran Integrasi ke Aplikasi atau API\n",
         "\n",
         "Beberapa opsi untuk mengintegrasikan model ini ke sistem nyata:\n",
         "\n",
