--- a/Notebook/05_Customer or Stakeholder Acceptance.ipynb
+++ b/Notebook/05_Customer or Stakeholder Acceptance.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 6. Customer / Stakeholder Acceptance (TDSP Step 5)\n",
+        "# 5. Customer / Stakeholder Acceptance\n",
         "\n",
         "Tahap ini berfokus pada:\n",
         "- Memvalidasi apakah model yang dideploy benar-benar menjawab kebutuhan bisnis.\n",
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -167,7 +167,7 @@
         }
       ],
       "source": [
-        "# 6.1 Import library, load dataset dan model\n",
+        "# 5.1 Import library, load dataset dan model\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -212,7 +212,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6.2 Evaluasi Ulang Metrik Kinerja\n",
+        "## 5.2 Evaluasi Ulang Metrik Kinerja\n",
         "\n",
         "Kita hitung kembali metrik utama untuk keperluan diskusi dengan stakeholder:\n",
         "- MAE (Mean Absolute Error)\n",
@@ -263,7 +263,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6.3 Analisis Error\n",
+        "## 5.3 Analisis Error\n",
         "\n",
         "Analisis error membantu menjawab beberapa pertanyaan penting:\n",
         "- Pada jenis mobil apa model paling sering salah besar?\n",
@@ -617,7 +617,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -734,7 +734,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6.4 Poin Diskusi dengan Stakeholder\n",
+        "## 5.4 Poin Diskusi dengan Stakeholder\n",
         "\n",
         "Beberapa poin yang bisa dibawa ke sesi *acceptance* dengan stakeholder:\n",
         "\n",
@@ -762,7 +762,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6.5 Hand-off dan Rencana Lanjutan\n",
+        "## 5.5 Hand-off dan Rencana Lanjutan\n",
         "\n",
         "Untuk menyelesaikan tahap *Customer / Stakeholder Acceptance*, beberapa artefak yang perlu disiapkan:\n",
         "\n",
