Ganti metode remove outlier dengan IQR.

--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 238,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 239,
       "id": "6ed82598",
       "metadata": {},
       "outputs": [
@@ -197,7 +197,7 @@
               "4    41912  Riyadh       59500       False  "
             ]
           },
-          "execution_count": 155,
+          "execution_count": 239,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 240,
       "metadata": {},
       "outputs": [
         {
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 241,
       "id": "56bd6579",
       "metadata": {},
       "outputs": [
@@ -323,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 242,
       "metadata": {},
       "outputs": [
         {
@@ -407,7 +407,7 @@
               "Mileage      195552.0  20000000.0  "
             ]
           },
-          "execution_count": 158,
+          "execution_count": 242,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -419,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 243,
       "id": "592ab46a",
       "metadata": {},
       "outputs": [
@@ -725,7 +725,7 @@
               "Negotiable        NaN         NaN  "
             ]
           },
-          "execution_count": 159,
+          "execution_count": 243,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -744,7 +744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 244,
       "metadata": {},
       "outputs": [
         {
@@ -904,7 +904,7 @@
               "14                                             [Used]  "
             ]
           },
-          "execution_count": 160,
+          "execution_count": 244,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -926,7 +926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 245,
       "id": "de27b541",
       "metadata": {},
       "outputs": [],
@@ -969,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 246,
       "id": "4912cb36",
       "metadata": {},
       "outputs": [
@@ -979,7 +979,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 162,
+          "execution_count": 246,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1001,7 +1001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 247,
       "id": "8fca34c8",
       "metadata": {},
       "outputs": [
@@ -1011,7 +1011,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 163,
+          "execution_count": 247,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1040,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 248,
       "id": "ac225b88",
       "metadata": {},
       "outputs": [],
@@ -1094,7 +1094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 249,
       "id": "f00ad75f",
       "metadata": {},
       "outputs": [
@@ -1167,7 +1167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 250,
       "id": "6956d04e",
       "metadata": {},
       "outputs": [
@@ -1239,7 +1239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 251,
       "id": "b603536a",
       "metadata": {},
       "outputs": [
@@ -1311,7 +1311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 252,
       "id": "ba18c892",
       "metadata": {},
       "outputs": [
@@ -1407,7 +1407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 253,
       "id": "6e104aca",
       "metadata": {},
       "outputs": [
@@ -1424,7 +1424,7 @@
               "np.int64(0)"
             ]
           },
-          "execution_count": 169,
+          "execution_count": 253,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1481,7 +1481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 254,
       "id": "c967663f",
       "metadata": {},
       "outputs": [
@@ -1491,7 +1491,7 @@
               "(8248, 12)"
             ]
           },
-          "execution_count": 170,
+          "execution_count": 254,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1507,15 +1507,12 @@
       "id": "45090957",
       "metadata": {},
       "source": [
-        "## 2.7 Menghapus Duplikat dan Menangani Outlier Harga\n",
-        "\n",
-        "Duplikat data akan dihapus untuk menghindari bias.\n",
-        "Selain itu, harga yang terlalu ekstrem juga perlu difilter agar model tidak overfit pada outlier."
+        "## 2.7 Menghapus Duplikat dan Menangani Outlier Harga"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 255,
       "id": "3cb63618",
       "metadata": {},
       "outputs": [
@@ -1524,7 +1521,8 @@
           "output_type": "stream",
           "text": [
             "Jumlah duplikat sebelum dihapus: 71\n",
-            "Data setelah bersih: (5482, 12)\n"
+            "Batas bawah: -55000.00, batas atas: 185000.00\n",
+            "Data setelah bersih: (5230, 12)\n"
           ]
         }
       ],
@@ -1537,11 +1535,21 @@
         "df = df[pd.to_numeric(df['Price'], errors='coerce').notna()]\n",
         "df['Price'] = df['Price'].astype(float)\n",
         "\n",
-        "# Hapus outlier harga ekstrem (1% bawah dan 99% atas)\n",
-        "q1, q99 = df['Price'].quantile([0.01, 0.99])\n",
-        "df = df[(df['Price'] >= q1) & (df['Price'] <= q99)]\n",
+        "# Menghapus outlier harga dengan metode IQR\n",
+        "Q1 = df['Price'].quantile(0.25)\n",
+        "Q3 = df['Price'].quantile(0.75)\n",
+        "IQR = Q3 - Q1\n",
         "\n",
-        "print('Data setelah bersih:', df.shape)"
+        "# Batas bawah & atas (umumnya 1.5 * IQR)\n",
+        "lower_bound = Q1 - 1.5 * IQR\n",
+        "upper_bound = Q3 + 1.5 * IQR\n",
+        "\n",
+        "print(f'Batas bawah: {lower_bound:.2f}, batas atas: {upper_bound:.2f}')\n",
+        "\n",
+        "# Filter data yang berada dalam rentang normal\n",
+        "df = df[(df['Price'] >= lower_bound) & (df['Price'] <= upper_bound)]\n",
+        "\n",
+        "print('Data setelah bersih:', df.shape)\n"
       ]
     },
     {
@@ -1554,7 +1562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 256,
       "id": "036392b5",
       "metadata": {},
       "outputs": [
@@ -1563,24 +1571,24 @@
           "output_type": "stream",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Index: 5482 entries, 0 to 8176\n",
+            "Index: 5230 entries, 0 to 8176\n",
             "Data columns (total 12 columns):\n",
             " #   Column       Non-Null Count  Dtype   \n",
             "---  ------       --------------  -----   \n",
-            " 0   Make         5482 non-null   category\n",
-            " 1   Type         5482 non-null   category\n",
-            " 2   Year         5482 non-null   int64   \n",
-            " 3   Origin       5482 non-null   category\n",
-            " 4   Color        5482 non-null   category\n",
-            " 5   Options      5482 non-null   category\n",
-            " 6   Engine_Size  5482 non-null   float64 \n",
-            " 7   Fuel_Type    5482 non-null   category\n",
-            " 8   Gear_Type    5482 non-null   category\n",
-            " 9   Mileage      5482 non-null   float64 \n",
-            " 10  Region       5482 non-null   category\n",
-            " 11  Price        5482 non-null   float64 \n",
+            " 0   Make         5230 non-null   category\n",
+            " 1   Type         5230 non-null   category\n",
+            " 2   Year         5230 non-null   int64   \n",
+            " 3   Origin       5230 non-null   category\n",
+            " 4   Color        5230 non-null   category\n",
+            " 5   Options      5230 non-null   category\n",
+            " 6   Engine_Size  5230 non-null   float64 \n",
+            " 7   Fuel_Type    5230 non-null   category\n",
+            " 8   Gear_Type    5230 non-null   category\n",
+            " 9   Mileage      5230 non-null   float64 \n",
+            " 10  Region       5230 non-null   category\n",
+            " 11  Price        5230 non-null   float64 \n",
             "dtypes: category(8), float64(3), int64(1)\n",
-            "memory usage: 278.5 KB\n"
+            "memory usage: 266.3 KB\n"
           ]
         }
       ],
@@ -1619,7 +1627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 257,
       "id": "df2e1819",
       "metadata": {},
       "outputs": [],
@@ -1637,7 +1645,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 258,
       "id": "c89ba2c2",
       "metadata": {},
       "outputs": [
