Resolve dependency confilct ketika jalankan ulang di komputer lain.

--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -178,7 +178,7 @@
               "4    41912  Riyadh       59500       False  "
             ]
           },
-          "execution_count": 116,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -268,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 4,
       "id": "56bd6579",
       "metadata": {},
       "outputs": [
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -399,7 +399,7 @@
               "Mileage      195552.0  20000000.0  "
             ]
           },
-          "execution_count": 119,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 6,
       "id": "592ab46a",
       "metadata": {},
       "outputs": [
@@ -717,7 +717,7 @@
               "Negotiable        NaN         NaN  "
             ]
           },
-          "execution_count": 120,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -736,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -896,7 +896,7 @@
               "14                                             [Used]  "
             ]
           },
-          "execution_count": 121,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -918,7 +918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 8,
       "id": "de27b541",
       "metadata": {},
       "outputs": [],
@@ -961,7 +961,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 9,
       "id": "4912cb36",
       "metadata": {},
       "outputs": [
@@ -971,7 +971,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 123,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -993,7 +993,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 10,
       "id": "8fca34c8",
       "metadata": {},
       "outputs": [
@@ -1003,7 +1003,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 124,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1032,7 +1032,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 11,
       "id": "ac225b88",
       "metadata": {},
       "outputs": [],
@@ -1086,7 +1086,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 12,
       "id": "f00ad75f",
       "metadata": {},
       "outputs": [
@@ -1159,7 +1159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 13,
       "id": "6956d04e",
       "metadata": {},
       "outputs": [
@@ -1231,7 +1231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 14,
       "id": "b603536a",
       "metadata": {},
       "outputs": [
@@ -1303,7 +1303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 15,
       "id": "ba18c892",
       "metadata": {},
       "outputs": [
@@ -1399,7 +1399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 16,
       "id": "6e104aca",
       "metadata": {},
       "outputs": [
@@ -1416,7 +1416,7 @@
               "np.int64(0)"
             ]
           },
-          "execution_count": 130,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1473,7 +1473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 17,
       "id": "c967663f",
       "metadata": {},
       "outputs": [
@@ -1483,7 +1483,7 @@
               "(8248, 12)"
             ]
           },
-          "execution_count": 131,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1504,7 +1504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 18,
       "id": "3cb63618",
       "metadata": {},
       "outputs": [
@@ -1535,7 +1535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 19,
       "id": "bc330727",
       "metadata": {},
       "outputs": [
@@ -1595,7 +1595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 20,
       "id": "b4988264",
       "metadata": {},
       "outputs": [
@@ -1639,7 +1639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 21,
       "id": "036392b5",
       "metadata": {},
       "outputs": [],
@@ -1665,7 +1665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 22,
       "id": "af59b27e",
       "metadata": {},
       "outputs": [
@@ -1713,7 +1713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 23,
       "id": "28ec2f05",
       "metadata": {},
       "outputs": [
@@ -1785,7 +1785,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 24,
       "id": "b16f538b",
       "metadata": {},
       "outputs": [
@@ -1857,7 +1857,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 25,
       "id": "06f9ee37",
       "metadata": {},
       "outputs": [
@@ -1929,7 +1929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 26,
       "id": "a9a92aa7",
       "metadata": {},
       "outputs": [],
@@ -2005,7 +2005,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 27,
       "id": "9fbb0c28",
       "metadata": {},
       "outputs": [
@@ -2030,7 +2030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 28,
       "id": "59fe59dd",
       "metadata": {},
       "outputs": [
@@ -2055,7 +2055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 29,
       "id": "4403b344",
       "metadata": {},
       "outputs": [
@@ -2080,7 +2080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 30,
       "id": "acda230b",
       "metadata": {},
       "outputs": [
@@ -2105,7 +2105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 31,
       "id": "7ddec250",
       "metadata": {},
       "outputs": [
@@ -2130,7 +2130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 32,
       "id": "6ff37fc5",
       "metadata": {},
       "outputs": [
@@ -2155,7 +2155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 33,
       "id": "1c97a108",
       "metadata": {},
       "outputs": [
@@ -2180,7 +2180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 34,
       "id": "a48d8d46",
       "metadata": {},
       "outputs": [
@@ -2213,7 +2213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 35,
       "id": "df2e1819",
       "metadata": {},
       "outputs": [],
@@ -2273,7 +2273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 36,
       "id": "84313e63",
       "metadata": {},
       "outputs": [
@@ -2328,7 +2328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 37,
       "id": "18e1368b",
       "metadata": {},
       "outputs": [
@@ -2353,7 +2353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 38,
       "id": "5761e9ea",
       "metadata": {},
       "outputs": [
@@ -2386,7 +2386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": 39,
       "id": "c89ba2c2",
       "metadata": {},
       "outputs": [
@@ -2406,7 +2406,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "arabian-cars-1",
       "language": "python",
       "name": "python3"
     },
